[package]
name = "game-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
tiny-keccak = { workspace = true }
turbo-program = { path = "../turbo-program" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
