[package]
name = "turbo-program"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = { workspace = true }
sp1-lib = "4.1.7"
cfg-if = "1.0.0"
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "patch-0.5.5-sp1-4.0.0" }
substrate-bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-4.0.0" }
serde = { version = "1.0", features = ["derive"] }
