[package]
name = "turbo-sp1"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = { workspace = true }
sp1-sdk = { workspace = true }
turbo-sp1-program = { path = "../turbo-sp1-program" }
game-lib = { path = "../lib" }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
uuid = { version = "1.16", features = ["v4"] }
substrate-bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-4.0.0" }
rand = "0.8"
